Set DOCKER_HOST

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ workflow:
 
 variables:
   FF_TIMESTAMPS: true
-  DOCKER_TLS_CERTDIR: "/certs"
+  DOCKER_HOST: tcp://docker:2375
 
 stages:
   - build
