--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,10 +5,8 @@ workflow:
 
 variables:
   FF_TIMESTAMPS: true
-  DOCKER_HOST: tcp://docker:2376
-  DOCKER_TLS_CERTDIR: "/certs"
-  DOCKER_TLS_VERIFY: 1
-  DOCKER_CERT_PATH: "$DOCKER_TLS_CERTDIR/client"
+  DOCKER_HOST: tcp://docker:2375
+  DOCKER_TLS_CERTDIR: ""
 
 stages:
   - build
