Set DOCKER_DRIVER

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,15 +5,16 @@ workflow:
 
 variables:
   FF_TIMESTAMPS: true
-  DOCKER_HOST: tcp://localhost:2375
+  DOCKER_DRIVER: overlay2
   DOCKER_TLS_CERTDIR: ""
 
 stages:
   - build
 
-image: docker:27.3.1
-services:
-  - docker:27.3.1-dind
+default:
+  image: docker:24.0.5
+  services:
+    - docker:24.0.5-dind
 
 before_script:
   - docker info
