--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ workflow:
 
 variables:
   FF_TIMESTAMPS: true
+  DOCKER_HOST: tcp://localhost:2375
   DOCKER_DRIVER: overlay2
   DOCKER_TLS_CERTDIR: ""
 
@@ -17,6 +18,7 @@ default:
     - docker:24.0.5-dind
 
 before_script:
+  - cat /etc/hosts
   - docker info
 
 build:
