--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,24 @@ variables:
   DOCKER_HOST: tcp://docker:2375
   DOCKER_DRIVER: overlay2
   DOCKER_TLS_CERTDIR: ""
+  KUBERNETES_CPU_REQUEST: "3"
+  KUBERNETES_CPU_LIMIT: "5"
+  KUBERNETES_MEMORY_REQUEST: "2Gi"
+  KUBERNETES_MEMORY_LIMIT: "4Gi"
+  KUBERNETES_EPHEMERAL_STORAGE_REQUEST: "512Mi"
+  KUBERNETES_EPHEMERAL_STORAGE_LIMIT: "1Gi"
+  KUBERNETES_HELPER_CPU_REQUEST: "3"
+  KUBERNETES_HELPER_CPU_LIMIT: "5"
+  KUBERNETES_HELPER_MEMORY_REQUEST: "2Gi"
+  KUBERNETES_HELPER_MEMORY_LIMIT: "4Gi"
+  KUBERNETES_HELPER_EPHEMERAL_STORAGE_REQUEST: "512Mi"
+  KUBERNETES_HELPER_EPHEMERAL_STORAGE_LIMIT: "1Gi"
+  KUBERNETES_SERVICE_CPU_REQUEST: "3"
+  KUBERNETES_SERVICE_CPU_LIMIT: "5"
+  KUBERNETES_SERVICE_MEMORY_REQUEST: "2Gi"
+  KUBERNETES_SERVICE_MEMORY_LIMIT: "4Gi"
+  KUBERNETES_SERVICE_EPHEMERAL_STORAGE_REQUEST: "512Mi"
+  KUBERNETES_SERVICE_EPHEMERAL_STORAGE_LIMIT: "1Gi"
 
 stages:
   - build
@@ -19,7 +37,6 @@ default:
       command: ["--tls=false"]
 
 before_script:
-  - ip link set dev eth0 mtu 1300
   - apk add -q git 
 
 build:
