--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,7 @@ build:
   script:
     - export VERSION=$(cat VERSION)
     - echo "Building packer-ci image version $VERSION"
-    - docker build . -t packer-ci:$VERSION --platform=linux/amd64 --build-arg VERSION=$VERSION
+    - docker build . -t packer-ci:$VERSION --platform=linux/amd64 --build-arg VERSION=$VERSION --build-arg ARTIFACTORY_URL=$ARTIFACTORY_URL
     - docker tag packer-ci:$VERSION $DOCKERTARGET:$VERSION
     - docker tag packer-ci:$VERSION $DOCKERTARGET:latest
     - echo $DOCKERPASS | docker login $DOCKERREGISTRY --username $DOCKERUSER --password-stdin
