--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,7 @@ build:
     - export BUILDDATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
     - export PLUGINLABELS=$(jq -r '.plugins[] | "io.mpoore.packer-ci.plugin.\(.name)=\(.version)"' PLUGINS)
     - echo "Building packer-ci image version $VERSION"
-    - docker build . -t packer-ci:$VERSION --platform=linux/amd64 --build-arg VERSION=$VERSION --build-arg ARTIFACTORY_URL=$ARTIFACTORY_URL --build-arg PLUGINLABELS=$PLUGINLABELS --build-arg BUILDDATE=$BUILDDATE
+    - docker build . -t packer-ci:$VERSION --platform=linux/amd64 --build-arg VERSION=$VERSION --build-arg ARTIFACTORY_URL=$ARTIFACTORY_URL --build-arg PLUGINLABELS="$PLUGINLABELS" --build-arg BUILDDATE=$BUILDDATE
     - |
       if [ $CI_COMMIT_REF_NAME == 'main' ]; then
         echo $DOCKERPASS | docker login $DOCKERREGISTRY --username $DOCKERUSER --password-stdin
