--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,6 +31,7 @@ build:
     - export VERSION=$(jq -r '.version' VERSION)
     - export BUILDDATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
     - export PLUGINLABELS=$(jq -r '.plugins[] | "io.mpoore.packer-ci.plugin.\(.name)=\(.version)"' PLUGINS)
+    - echo "Plugin labels - $PLUGINLABELS"
     - echo "Building packer-ci image version $VERSION"
     - docker build . -t packer-ci:$VERSION --platform=linux/amd64 --build-arg VERSION=$VERSION --build-arg ARTIFACTORY_URL=$ARTIFACTORY_URL --build-arg PLUGINLABELS="$PLUGINLABELS" --build-arg BUILDDATE=$BUILDDATE
     - |
