Trying local registry

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,9 +14,9 @@ stages:
   - build
 
 default:
-  image: docker:27.3.1
+  image: ${LOCALREGISTRY}docker:27.3.1
   services:
-    - name: docker:27.3.1-dind
+    - name: ${LOCALREGISTRY}docker:27.3.1-dind
       command: ["--tls=false"]
       variables:
         DOCKER_OPTS: "--insecure-registry=$DOCKERREGISTRY"
