--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,9 +14,9 @@ stages:
   - build
 
 default:
-  image: ${LOCALREGISTRY}docker:27.3.1
+  image: docker:27.3.1
   services:
-    - name: ${LOCALREGISTRY}docker:27.3.1-dind
+    - name: docker:27.3.1-dind
       command: ["--tls=false"]
       variables:
         DOCKER_OPTS: "--insecure-registry=$DOCKERREGISTRY"
@@ -32,7 +32,7 @@ build:
     - export BUILDDATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
     - jq -r '.plugins[] | "LABEL io.mpoore.packer-ci.plugin.\(.name)=\"\(.version)\""' PLUGINS >> Dockerfile
     - echo "Building packer-ci image version $VERSION"
-    - docker build . -t packer-ci:$VERSION --platform=linux/amd64 --build-arg VERSION=$VERSION --build-arg ARTIFACTORY_URL=$ARTIFACTORY_URL --build-arg BUILDDATE=$BUILDDATE
+    - docker build . -t packer-ci:$VERSION --platform=linux/amd64 --build-arg VERSION=$VERSION --build-arg ARTIFACTORY_URL=$ARTIFACTORY_URL --build-arg BUILDDATE=$BUILDDATE --build-arg LOCALREGISTRY=$LOCALREGISTRY
     - |
       if [ $CI_COMMIT_REF_NAME == 'main' ]; then
         echo $DOCKERPASS | docker login $DOCKERREGISTRY --username $DOCKERUSER --password-stdin
